[gd_scene load_steps=4 format=3 uid="uid://di5h8hcjdudlh"]

[ext_resource type="Script" path="res://Scenes/Ending/ending.gd" id="1_qx5ms"]
[ext_resource type="Texture2D" uid="uid://cvi8i71lp2y23" path="res://Art/UI/Mori no oku no kakurezato/battle_chara01.png" id="2_kkq4f"]
[ext_resource type="Texture2D" uid="uid://cqrswrxhi1hfq" path="res://Art/NovelAI/1girl, armchair, 1.2__figure four sitting__, from below, princess, looking down, s-1698261205.png" id="2_r7wvx"]

[node name="Ending" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_qx5ms")

[node name="EndingText" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayEndingButton" type="Button" parent="." groups=["Button"]]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -141.0
offset_top = -34.0
grow_horizontal = 0
grow_vertical = 0
text = "Play Ending"

[node name="EndingImageHolderTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 324)
offset_right = 611.0
offset_bottom = 324.0
texture = ExtResource("2_kkq4f")
expand_mode = 3
stretch_mode = 5

[node name="EndingImage" type="Polygon2D" parent="EndingImageHolderTexture"]
unique_name_in_owner = true
texture = ExtResource("2_r7wvx")
texture_offset = Vector2(30, -30)
texture_scale = Vector2(3.5, 3.5)
polygon = PackedVector2Array(127, 280, -5, 149, 127, 18, 259, 149)

[connection signal="pressed" from="PlayEndingButton" to="." method="_on_play_ending_button_pressed"]
